changes w of rectangle

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <section class="w-full bg-back  ">
             <div class=" pt-20 mt-14 w-full">
               <div class="w-11/12 mx-auto relative  ">
-                <div class=" absolute -top-12 -left-8">
+                <div class=" absolute -top-12 -left-8 hidden lg:flex  ">
                   <img src="assets/Vector.png" alt="">
                 </div>
                 <div class="w-11/12 mx-auto">
@@ -183,7 +183,7 @@
                         
                       </div>
       
-                      <figure class="w-full">
+                      <figure>
                         <img
                           src="assets/Rectangle.png"
                           alt="Album" />
