changes styles of latest portfolio

--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
 
                   <div class="border-2 border-gray-100 rounded-lg order-first  ">
                     <div class="hero">
-                      <div class="hero-content flex-col lg:flex-row order-1 w-full">
+                      <div class="hero-content flex-col lg:flex-row w-full">
                         <img
                           src="assets/img4.png"
                           class="max-w-sm rounded-lg " />
-                        <div class="items-center justify-center w-full">
+                        <div class="items-center justify-center w-full ">
                           <h1 class="text-xl font-bold">commercial</h1>
                           <p class="py-1">
                             The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
@@ -373,7 +373,7 @@
                           
                           <!-- asdf -->
   
-                          <button class="btn bg-transparent hover:bg-transparent  font-bold  text-black text-lg text-center border-none ">view details<svg xmlns="http://www.w3.org/2000/svg"   fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6  rounded-full bg-primary text-black  pl-0.5">
+                          <button class="btn bg-transparent hover:bg-transparent  font-bold  text-black text-lg text-center border-none   flex">view details<svg xmlns="http://www.w3.org/2000/svg"   fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6  rounded-full bg-primary text-black  pl-0.5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"  />
                           </svg></button>
   
